Increase memory in integTest and remove debug flag